[package]
name = "nagios"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.9"
uart_16550 = "0.2.0"
# spin = "0.9.8"
# lazy_static = { version = "1.4.0", features=["spin_no_std"] }
spin = "0.5.2"
lazy_static = { version = "1.0", features=["spin_no_std"] }
