[package]
name = "nagios"
version = "0.1.0"
edition = "2021"

# [profile.dev]
# panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
                "-serial", "stdio",
                "-display", "none"
            ]
test-success-exit-code = 33

[dependencies]
bootloader = "0.9"
uart_16550 = "0.2.0"
spin = "0.9.8"
lazy_static = { version = "1.4.0", features=["spin_no_std"] }
x86_64 = "0.14.12"
